TEST_PROGRAMS/INVALID_TYPECHECK/add_stringrune.go
package main;

func main() {
    
    //this operation is allowed
    var c = 'g';
    var x = "hello"+c;
    print(x);
}
